--- a/test/test1.html
+++ b/test/test1.html
@@ -1,7 +1,5 @@
 <!-- sdhbhjebvr-->
-<div class="wrapper">
-    <!-- kdfjbn kdfkjjdbgf  knjskfnv fkfnkjesbf -->
-    <pub-login-link id="123" />
-    <img src="dghshver" />
-    <h1> sdbbvrgbuer </h1>
+<div id="1234">
 </div>
+<pub-login-link class="row"/>
+<!-- sdhbhjebvr-->
